libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/use-struct-literal.jsonc
//@ run: fail
//@ description: any value that isn't an identifier should fail
[
  "::kernel::special_form::use",
  "::core::math",
  {
    "#struct": {
      "x": { "#literal": 1 }
      //~^ ERROR expected `_` or a simple identifier as the alias
    }
  },
  { "#literal": 1 }
]
